--- a/FaceRecognitionMVC/appsettings.json
+++ b/FaceRecognitionMVC/appsettings.json
@@ -6,9 +6,10 @@
     }
   },
   "RabbitMQ": {
-    "Host": "rabbitmq://fish-01.rmq.cloudamqp.com",
+    "Host": "rabbitmq://fish.rmq.cloudamqp.com/dvakdhvc",
     "Username": "dvakdhvc",
-    "Password": "MfOlGLaVCVz8CLFqHu1vy1K26OA87bSK"
+    "Password": "MfOlGLaVCVz8CLFqHu1vy1K26OA87bSK",
+    "QueueName": "file-message-queue"
   },
   "AllowedHosts": "*"
 }
