--- a/FaceRecognitionConsumer/FaceRecognitionConsumer.csproj
+++ b/FaceRecognitionConsumer/FaceRecognitionConsumer.csproj
@@ -9,8 +9,13 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.2.3" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FaceRecognition.Shared\FaceRecognition.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
